fix(overscroll): make Plate fixed on mobile

--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -6,6 +6,12 @@
   }
 }
 
+@mixin below-desktop {
+  @media (max-width: $phone-width) {
+    @content;
+  }
+}
+
 @mixin desktop {
   @media (min-width: $phone-width + 1) {
     @content;
